# 5

./: CMakeLists.txt  GetDataFromFile.cpp  create_image.cpp  figure.cpp  figure.hpp  figure_factory.hpp  head.hpp  light.hpp  main.cpp  objects.txt  parametrs.txt  vec3d.cpp
